--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 
-
-
 *{
     padding:0%;
     margin: 0%;
-    background-color: #ded9d5 ;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+
 }
 
 h1{
@@ -12,7 +11,7 @@ font-size: 55px;
 }
 
 h2{
-    margin-top: 60px;
+    padding: 100px 0 40px 0;
     display:flex;
     justify-content: center;
     align-items: center;  
@@ -22,6 +21,7 @@ h2{
     display:flex;
     justify-content: center;
     align-items: center;
+    background-color: #ded9d5;
 }
 
 .header{
@@ -44,7 +44,7 @@ h2{
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    gap: 50px;
+    gap: 60px;
 }
 
 a{
@@ -54,12 +54,76 @@ a{
     display: flex;
     align-content: center;
 }
+a:hover{
+    color: #1b1919;
+    text-shadow: 2px 2px 2px #36333341 ;
+}
+
+.sliderContainer {
+    max-width: 100%;
+    height: 60%;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #c5bab0;
+     padding: 20px; 
+}
 
 .contentSlider{
-    width: 90vw;
-    height: 40vh;
-    background-color: #89837e;
-    opacity: 40%;
-    margin-top: 20px;
+    width: 70%;
+    height: 50%;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.2);
+    padding: 20px;
     
 }
+
+.stylePicture {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.slide{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 25px;    
+}
+
+.slide:hover {
+    box-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+}
+
+
+.button {
+    width: 3%;
+    height: 4%;
+    font-size: 35px;
+    background-color: transparent;
+    border-radius: 80% ;
+}
+
+.button:hover {
+    box-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+}
+
+.styleNames {
+    font-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
+    color: black;
+}
+
+.stylePriceText {
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    color: #A61300;
+    font-weight: bold;
+}
+
